<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agendamento"
        android:textSize="21sp"
        android:textColor="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_uma_tecnica"
        android:textColor="@color/texto"
        android:textSize="17sp"
        android:fontFamily=""
        android:layout_marginTop="15dp"/>

        <Spinner
            android:id="@+id/tecnicas_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:entries="@array/tecnicas_sel"
            ></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_um_horario"
        android:textColor="@color/texto"
        android:textSize="17sp"
        android:fontFamily=""
        android:layout_marginTop="15dp"/>

        <TimePicker
            android:id="@+id/simpleTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:timePickerMode="spinner" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecione uma data:"
        android:textColor="@color/texto"
        android:textSize="17sp"
        android:fontFamily=""
        android:layout_marginTop="15dp"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botao"
                android:text="@string/confirmar"
                android:textColor="@color/texto"
                />
            <Button
                android:layout_toRightOf="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_marginLeft="10dp"
                android:background="@drawable/botao"
                android:textColor="@color/texto"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
